cabal-version:       2.4
name:                control-logger
version:             0.1.0.0
synopsis: Logger used by all projects
license-file:        LICENSE
build-type:          Simple

flag katip
  description: Enable Katip support
  default: True
  manual: False

flag orphans
  description: MonadLogger orphan instance
  manual: True
  default: True

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Control.Logger
                       Control.Logger.Internal
  if !impl(ghcjs) && flag(katip)
    exposed-modules:  Control.Logger.Katip
                      Control.Logger.Katip.Utils
  if flag(orphans)
    cpp-options: -DWITH_ORPHANS
    exposed-modules: Control.Logger.Orphans
  build-depends:       base
                     , aeson
                     , bytestring
                     , control-has
                     , deepseq
                     , exceptions
                     , fast-logger
                     , http-client
                     , mtl
                     , text
                     , time
                     , unordered-containers
  if flag(orphans)
    build-depends:     monad-logger
  if !impl(ghcjs) && flag(katip)
    build-depends:     katip
                     , optparse-applicative
                     , control-has-katip
  default-language:    Haskell2010
  default-extensions:  RankNTypes
                       DataKinds
                       FlexibleContexts
                       FlexibleInstances
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       DeriveGeneric
                       ConstraintKinds
                       RecordWildCards
                       TypeSynonymInstances
