cabal-version:       2.4
name:                control-logger
version:             0.1.0.0
synopsis: Logger used by all projects
license-file:        LICENSE
build-type:          Simple

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  if !impl(ghcjs)
    exposed-modules:  Control.Logger
                      Control.Logger.Katip
                      Control.Logger.Katip.Utils
                      Control.Logger.Orphans
  exposed-modules:     Control.Logger.Internal
  build-depends:       base
                     , aeson
                     , bytestring
                     , control-has
                     , control-has-katip
                     , deepseq
                     , exceptions
                     , fast-logger
                     , http-client
                     , lens
                     , monad-logger
                     , mtl
                     , shakespeare
                     , text
                     , time
                     , unordered-containers
  if !impl(ghcjs)
    build-depends:     katip >= 0.8.8.0
                     , optparse-applicative
  default-language:    Haskell2010
  default-extensions:  RankNTypes
                       DataKinds
                       FlexibleContexts
                       FlexibleInstances
                       LambdaCase
                       OverloadedStrings
                       ScopedTypeVariables
                       DeriveGeneric
                       ConstraintKinds
                       RecordWildCards
                       TypeSynonymInstances
